tera/src/snapshot_tests/snapshots/tera__snapshot_tests__parser__parser_components_definition_success@basic.txt.snap
---
source: tera/src/snapshot_tests/parser.rs
expression: "components[0]"
input_file: tera/src/snapshot_tests/parser_inputs/success/components/def/basic.txt
---
ComponentDefinition {
    name: "array",
    kwargs: {
        "array": ComponentArgument {
            default: Some(
                Array([]),
            ),
            typ: Some(
                Array,
            ),
            implicit: false,
        },
        "array_of_maps": ComponentArgument {
            default: Some(
                Array([Map({String("hello"): I64(1)})]),
            ),
            typ: Some(
                Array,
            ),
            implicit: false,
        },
        "map": ComponentArgument {
            default: Some(
                Map({}),
            ),
            typ: Some(
                Map,
            ),
            implicit: false,
        },
    },
    rest_param_name: None,
    metadata: {},
    body: [
        "Hello",
    ],
}
