tera/src/snapshot_tests/snapshots/tera__snapshot_tests__parser__parser_components_definition_success@escaped_default.txt.snap
---
source: tera/src/snapshot_tests/parser.rs
expression: "components[0]"
input_file: tera/src/snapshot_tests/parser_inputs/success/components/def/escaped_default.txt
---
ComponentDefinition {
    name: "greet",
    kwargs: {
        "label": ComponentArgument {
            default: Some(
                String("hello
                world"),
            ),
            typ: Some(
                String,
            ),
            implicit: false,
        },
    },
    rest_param_name: None,
    metadata: {},
    body: [
        Var {
            name: "label",
        } @ 1:45-1:50 (45..50),
    ],
}
