tera/src/snapshot_tests/snapshots/tera__snapshot_tests__parser__parser_components_definition_success@metadata.txt.snap
---
source: tera/src/snapshot_tests/parser.rs
expression: "components[0]"
input_file: tera/src/snapshot_tests/parser_inputs/success/components/def/metadata.txt
---
ComponentDefinition {
    name: "array",
    kwargs: {
        "greeting": ComponentArgument {
            default: None,
            typ: Some(
                String,
            ),
            implicit: false,
        },
    },
    rest_param_name: None,
    metadata: {
        "css": String("./array.css"),
    },
    body: [
        "Hello",
    ],
}
