tera/src/snapshot_tests/snapshots/tera__snapshot_tests__parser__parser_components_definition_success@trim_optout.txt.snap
---
source: tera/src/snapshot_tests/parser.rs
expression: "components[0]"
input_file: tera/src/snapshot_tests/parser_inputs/success/components/def/trim_optout.txt
---
ComponentDefinition {
    name: "greet",
    kwargs: {
        "label": ComponentArgument {
            default: None,
            typ: None,
        },
    },
    rest_param_name: None,
    metadata: {
        "trim": Bool(false),
    },
    body: [
        "\n",
        Var {
            name: "label",
        } @ 2:2-2:7 (47..52),
        "\n",
    ],
}
