tera/src/snapshot_tests/snapshots/tera__snapshot_tests__parser__parser_components_render_success@render_inline_escaped.txt.snap
---
source: tera/src/snapshot_tests/parser.rs
expression: Expressions(expr_nodes)
input_file: tera/src/snapshot_tests/parser_inputs/success/components/render_inline_escaped.txt
---
<button{label: 'hello
world'}/>
